--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </a> 
 
     <a href="cadastro.html" class="logocl">
-    <img src="C:\Users\Borracharia\Documents\html\17\picture\use.png" alt="logocc">
+    <img src="picture/use.png" alt="logocc">
     <span>Cadastro</span>
     </a>    
      
