criação pagina de regiustro hora

--- a/registro.html
+++ b/registro.html
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro</title>
+    <title>Registro de hora</title>
+    <link rel="stylesheet" href="registro.css">
 </head>
 <body>
+    
+
+<div class= 'all'> 
+    <header>
+        <h1> Ponto Eletronico </h1>
+    </header>
+    <main class="time">  
+        <span class = "hour">00</span>:
+        <span class = "minute">00</span>:
+        <span class = "second">00</span>
+    </main>
+    <div class="greeting">Bom dia!</div>
+    <footer>
+        Ponto eletronico desenvolvolvido por Sapo
+    </footer>
+
+</div>
     
 </body>
 </html>
