--- a/registro.html
+++ b/registro.html
@@ -6,18 +6,24 @@
     <title>Registro de hora</title>
     <link rel="stylesheet" href="registro.css">
 </head>
-<body>
-    
 
+
+<!-- Forma antiga, fui fazer de outro jeito 
+<body>
 <div class= 'all'> 
     <header>
         <h1> Ponto Eletronico </h1>
     </header>
     <main class="time">  
+	<script src="./script.js"> </script>
+	
+	
         <span class = "hour">00</span>:
-        <span class = "minute">00</span>:
-        <span class = "second">00</span>
+		<span class = "minute">00</span>:
+		<span class = "second">00</span>
+		
     </main>
+	--> 
     <div class="greeting">Bom dia!</div>
     <footer>
         Ponto eletronico desenvolvolvido por Sapo
