como fazer committt

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <a href="registro.html" class="logocl">
 <img src="picture/Registro2.png" alt = "logocl">
-    <span>hora</span>
+    <span>hora</span> <img src="" alt="">
     </a> 
 
     <a href="cadastro.html" class="logocl">
