--- a/registro.html
+++ b/registro.html
@@ -6,10 +6,14 @@
     <title>Registro de hora</title>
     <link rel="stylesheet" href="registro.css">
 </head>
-
+<body>
+<div = class = "container">
+<div class = "clock" ></div>
+</div>
+<script> src= "script.js"</script>
 
 <!-- Forma antiga, fui fazer de outro jeito 
-<body>
+
 <div class= 'all'> 
     <header>
         <h1> Ponto Eletronico </h1>
