--- a/registro.html
+++ b/registro.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="registro.css">
 </head>
 <body>
-<div = class = "container">
+<div = class "container">
 <div class = "clock" ></div>
 </div>
-<script> src= "script.js"</script>
+<script src= "script.js"></script>
 
 <!-- Forma antiga, fui fazer de outro jeito 
 
