--- a/registro.html
+++ b/registro.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="registro.css">
 </head>
 <body>
-<div = class "container">
+<div  class = "container">
 <div class = "clock" ></div>
-</div>
 <script src= "script.js"></script>
+</div>
+
 
 <!-- Forma antiga, fui fazer de outro jeito 
 
