--- a/registro.html
+++ b/registro.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="registro.css">
 </head>
 <body>
-<div  class = "container">
-<div class = "clock" ></div>
+    <header >
+        <h1>Registro de ponto</h1>
+    </header>
+
+<div class = "clock" >
 <script src= "script.js"></script>
 </div>
-
 
 <!-- Forma antiga, fui fazer de outro jeito 
 
