--- a/registro.html
+++ b/registro.html
@@ -7,36 +7,26 @@
     <link rel="stylesheet" href="registro.css">
 </head>
 <body>
+    
+<div class="all">
+
     <header >
         <h1>Registro de ponto</h1>
     </header>
+
 
 <div class = "clock" >
 <script src= "script.js"></script>
 </div>
 
-<!-- Forma antiga, fui fazer de outro jeito 
 
-<div class= 'all'> 
-    <header>
-        <h1> Ponto Eletronico </h1>
-    </header>
-    <main class="time">  
-	<script src="./script.js"> </script>
-	
-	
-        <span class = "hour">00</span>:
-		<span class = "minute">00</span>:
-		<span class = "second">00</span>
-		
-    </main>
-	--> 
-    <div class="greeting">Bom dia!</div>
+
+<div class="greeting">Bom dia!</div>
     <footer>
         Ponto eletronico desenvolvolvido por Sapo
     </footer>
-
 </div>
     
+</div>
 </body>
 </html>
