--- a/registro.html
+++ b/registro.html
@@ -7,21 +7,36 @@
     <link rel="stylesheet" href="registro.css">
 </head>
 <body>
-    
+ <div class="cab">
+<h1>Registro de ponto</h1>
+<h2>Olá <Strong>Usuario</Strong></h2>
+
+<div class="wrapper">
+  <button type="button"><span>Registrar</span></button>
+</div>
+
+<p>Ponto confirmado</p>
+<p>Ultimo ponto [XX/YY @ HH:MM]</p>
+
+
+ </div>
+
 <div class="all">
-
     <header >
-        <h1>Registro de ponto</h1>
+        <h1></h1>
+        
     </header>
-
 
 <div class = "clock" >
 <script src= "script.js"></script>
 </div>
 
-
-
 <div class="greeting">Bom dia!</div>
+
+<p>Seus Registros de Hoje:</p>
+<p>- Entrada: HH:MM</p>
+<p>- Saída Almoço: HH:MM</p>
+<p> Retorno Almoço: HH:MM </p>
     <footer>
         Ponto eletronico desenvolvolvido por Sapo
     </footer>
